<?xml version="1.0"?>
<package format="3">
  <name>limoncello</name>
  <version>0.0.0</version>
  <description>The LIMOncello package</description>

  <author email="carlosp335@gmail.com">CPerezRuiz335</author>
  <maintainer email="carlosp335@gmail.com">CPerezRuiz335</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
